# Mobile-Mic-Client

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  audiostream.c
lib/: audio_engine.dart  main.dart
